progressive-delivery/rollouts/canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-canary-stable
  namespace: apps
  labels:
    app: demo-canary
    role: stable
spec:
  selector:
    app: demo-canary
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: demo-canary-canary
  namespace: apps
  labels:
    app: demo-canary
    role: canary
spec:
  selector:
    app: demo-canary
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
